# archivum

./: .gitignore  Cargo.toml  README.md  config.toml.example  gitea-docker-compose.yml
src/: actions.rs  commands.rs  config.rs  gitea.rs  github.rs  main.rs
src/commands/: download.rs  download_repo.rs  download_starred.rs  mirror.rs  mirror_starred.rs  mod.rs  upload.rs
