[package]
name = "archivum"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.1"
duct = "0.13.7"
glob = "0.3.1"
reqwest = { version = "0.11.24", features = ["blocking", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.14"

[dev-dependencies]
tempfile = "3.10.0"
